# dd_eval

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  cpp-linter.yml
benchmarks/: CMakeLists.txt  benchmark_simexec_bernstein.cpp  benchmark_simexec_berstein.cpp  benchmark_simexec_ghz.cpp  benchmark_simexec_grover.cpp  benchmark_simexec_qpe.cpp
include/: AlternatingVerificationExecutor.hpp  CircuitSimulatorExecutor.hpp  Executor.hpp  Result.hpp  ResultBase.hpp  Results.hpp  SimulationExecutor.hpp  SimulationTask.hpp  Task.hpp  TestHelpers.hpp  VerificationExecutor.hpp  VerificationTask.hpp
include/executors/: AlternatingVerificationExecutor.hpp  CircuitSimulatorExecutor.hpp  DeterministicNoiseSimExecutor.hpp  EquivalenceCheckerExecutor.hpp  HybridSimulatorAmplitudeExecutor.hpp  HybridSimulatorDDExecutor.hpp  HybridSimulatorExecutor.hpp  StochasticNoiseSimulatorExecutor.hpp  UnitarySimRecursiveExecutor.hpp  UnitarySimSequentialExecutor.hpp  UnitarySimulatorExecutor.hpp
include/tasks/: SimulationTask.hpp  VerificationTask.hpp
src/: AlternatingVerificationExecutor.cpp  CMakeLists.txt  CircuitSimulatorExecutor.cpp  Executor.cpp  Result.cpp  SimulationExecutor.cpp  SimulationTask.cpp  TestHelpers.cpp  VerificationExecutor.cpp  VerificationTask.cpp
src/executors/: AlternatingVerificationExecutor.cpp  CircuitSimulatorExecutor.cpp  DeterministicNoiseSimExecutor.cpp  EquivalenceCheckerExecutor.cpp  HybridSimulatorAmplitudeExecutor.cpp  HybridSimulatorDDExecutor.cpp  HybridSimulatorExecutor.cpp  StochasticNoiseSimulatorExecutor.cpp  UnitarySimRecursiveExecutor.cpp  UnitarySimSequentialExecutor.cpp  UnitarySimulatorExecutor.cpp
src/tasks/: SimulationTask.cpp  VerificationTask.cpp
test/: CMakeLists.txt  circuits.json  equi_circuits.json  sim_circuits.json  test_circ_sim_exec.cpp  test_ddsim_simple.cpp  test_deter_noise_sim_exec.cpp  test_hybrid_sim_exec.cpp  test_hybrid_sim_exec_dd.cpp  test_qcec_simple.cpp  test_qcecexec.cpp  test_qcecexec_simple.cpp  test_sim.cpp  test_simexec.cpp  test_simexec_berstein.cpp  test_simexec_ghz.cpp  test_simexec_grover.cpp  test_simexec_qpe.cpp  test_simexec_simple.cpp  test_stoch_noise_sim_exec.cpp  test_uni_sim_exec.cpp  test_uni_sim_exec_seq.cpp  ver_circuits.json
